# relu-manim

./: .gitignore  AGENTS.md  README.md  main.py  manim.cfg  pyproject.toml
notebooks/: circles_transformation.ipynb  playground.ipynb  poly_relu_reg.ipynb  poly_torch.ipynb  regression.ipynb  rgb.ipynb  surface_plot.ipynb
scenes/: network.py  presentation.py  ranking_contributions.py  relu.py  relu_planes_decision_surface.py  slides_example.py
src/: circles_transformation.py  playground.py  poly_relu_reg.py  poly_torch.py  regression.py  rgb.py  surface_plot.py
