[project]
name = "relu-manim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab-vim>=4.1.4",
    "manim>=0.20.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "torch>=2.11.0",
]
